feat: add db layer (#8)
* feat: set up db layer


* feat: set up dto


* fix: code clean up


* fix: remove comment


---------
